[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/flags/germany.png" type="Texture" id=1]
[ext_resource path="res://assets/flags/italy.png" type="Texture" id=2]
[ext_resource path="res://assets/flags/spain.png" type="Texture" id=3]
[ext_resource path="res://assets/flags/united-kingdom.png" type="Texture" id=4]
[ext_resource path="res://assets/flags/portugal.png" type="Texture" id=5]
[ext_resource path="res://src/screens/language-pick/LanguagePicker.gd" type="Script" id=6]

[node name="LanguagePicker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -64.0
margin_right = 368.0
margin_bottom = 64.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="TextureButton" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portuguese" type="TextureButton" parent="HBoxContainer"]
margin_left = 168.0
margin_right = 296.0
margin_bottom = 128.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Italian" type="TextureButton" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 464.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )

[node name="Spanish" type="TextureButton" parent="HBoxContainer"]
margin_left = 504.0
margin_right = 632.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )

[node name="German" type="TextureButton" parent="HBoxContainer"]
margin_left = 672.0
margin_right = 800.0
margin_bottom = 128.0
texture_normal = ExtResource( 1 )
[connection signal="pressed" from="HBoxContainer/English" to="." method="_on_English_pressed"]
[connection signal="pressed" from="HBoxContainer/Portuguese" to="." method="_on_Portuguese_pressed"]
[connection signal="pressed" from="HBoxContainer/Italian" to="." method="_on_Italian_pressed"]
[connection signal="pressed" from="HBoxContainer/Spanish" to="." method="_on_Spanish_pressed"]
[connection signal="pressed" from="HBoxContainer/German" to="." method="_on_German_pressed"]
